# personal-financial-dashboard

./: .env.example  .gitignore  README.md
.github/workflows/: deploy-app.yml  deploy-infra.yml  test.yml
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: account.py  transaction.py
backend/app/routers/: accounts.py  crypto.py  plaid.py
backend/app/services/: coinbase.py  dynamodb.py  plaid.py  secrets.py
backend/sync/: handler.py
backend/tests/: conftest.py  test_accounts.py  test_crypto.py  test_dynamodb.py  test_plaid.py  test_sync.py
cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: config.ts
cdk/lib/constructs/: python-function.ts
cdk/lib/stacks/: superior-stack.ts
frontend/: jest.config.ts  package-lock.json  package.json
frontend/src/__tests__/: AccountCard.test.tsx  DashboardSummary.test.tsx  ManualAccountForm.test.tsx  TransactionList.test.tsx  accountTypes.test.ts  api.test.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/accounts/[accountId]/: page.tsx
frontend/src/components/: AccountCard.tsx  AccountDetails.tsx  ManualAccountForm.tsx  TransactionList.tsx
frontend/src/lib/: amplify.ts  api.ts
terraform/: backend.tf  locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/cognito/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf
terraform/modules/ssm_outputs/: main.tf  variables.tf
